include/fitpack_surface_c.h

/* ===========================================================================================
 * Method Wrappers (standalone-compatible only)
 * =========================================================================================== */

/**
 * @brief fit
 * @param smoothing 
 * @param order 
 * @param keep_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_surface_c_fit(fitpack_surface_c* self, double* smoothing, int32_t* order, bool* keep_knots);
/**
 * @brief interpolate
 * @param reset_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_surface_c_interpolate(fitpack_surface_c* self, bool* reset_knots);
/**
 * @brief least_squares
 * @param smoothing 
 * @param reset_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_surface_c_least_squares(fitpack_surface_c* self, double* smoothing, bool* reset_knots);
/**
 * @brief surface_eval_one
 * @param x 
 * @param y 
 * @param ierr 
 * @return Result value
 */
FITPACK_CAPI_EXPORT double fitpack_surface_c_surface_eval_one(fitpack_surface_c* self, double x, double y, int32_t* ierr);
/**
 * @brief surface_derivatives_one
 * @param x 
 * @param y 
 * @param dx 
 * @param dy 
 * @param ierr 
 * @return Result value
 */
FITPACK_CAPI_EXPORT double fitpack_surface_c_surface_derivatives_one(fitpack_surface_c* self, double x, double y, int32_t dx, int32_t dy, int32_t* ierr);
/**
 * @brief cross_section
 * @param u 
 * @param along_y 
 * @param ierr 
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_cross_section(const fitpack_surface_c* self, double u, bool along_y, int32_t* ierr, fitpack_curve_c* result);
/**
 * @brief derivative_spline
 * @param nux 
 * @param nuy 
 * @param ierr 
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_derivative_spline(const fitpack_surface_c* self, int32_t nux, int32_t nuy, int32_t* ierr, fitpack_surface_c* result);
/**
 * @brief comm_size
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_surface_c_comm_size(const fitpack_surface_c* self);
/**
 * @brief mse
 * @return Result value
 */
FITPACK_CAPI_EXPORT double fitpack_surface_c_mse(const fitpack_surface_c* self);
/**
 * @brief core_comm_size
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_surface_c_core_comm_size(const fitpack_surface_c* self);
/**
 * @brief destroy_base
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_destroy_base(fitpack_surface_c* self);
/**
 * @brief new_points
 * @param x 
 * @param y 
 * @param z 
 * @param w 
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_new_points(fitpack_surface_c* self, int32_t n, const double* x, const double* y, const double* z, double* w);
/**
 * @brief new_fit
 * @param x 
 * @param y 
 * @param z 
 * @param w 
 * @param smoothing 
 * @param order 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_surface_c_new_fit(fitpack_surface_c* self, int32_t n, const double* x, const double* y, const double* z, double* w, double* smoothing, int32_t* order);
/**
 * @brief surface_eval_many
 * @param x 
 * @param y 
 * @param ierr 
 * @note result: caller-allocated buffer of max_size elements; n_result receives the actual count (= product of (SIZE(x)))
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_surface_eval_many(fitpack_surface_c* self, int32_t n, const double* x, const double* y, int32_t* ierr, double* result, int32_t* n_result, int32_t max_size);