src/capi/fitpack_surfaces_c.f90


    ! ===========================================================================================
    ! SECTION 6: Fortran Constructors (NOT bind(C))
    ! ===========================================================================================

    !> Create from Fortran object (owns copy)
    type(fitpack_surface_c) function fitpack_surface_c_f2c(f) result(c)
        type(fitpack_surface), intent(in) :: f
        type(fitpack_surface), pointer :: fptr
        logical :: ok

        ok = fitpack_surface_c_pointer(c, fptr)
        if (ok) fptr = f
    end function fitpack_surface_c_f2c

    !> Create from Fortran object (optionally as pointer)
    type(fitpack_surface_c) function fitpack_surface_c_fptr2c(f, want_pointer) result(c)
        type(fitpack_surface), intent(inout), target :: f
        logical, intent(in) :: want_pointer

        if (want_pointer) then
            c%cptr = c_loc(f)
            c%is_pointer = .true._c_bool
        else
            c = fitpack_surface_c_f2c(f)
        end if
    end function fitpack_surface_c_fptr2c

    ! ===========================================================================================
    ! SECTION 7: Method Wrappers (bind(C))
    ! ===========================================================================================
    !> fit
    integer(c_int32_t) function fitpack_surface_c_fit(this, smoothing, order, keep_knots) bind(C, name='fitpack_surface_c_fit')
        type(fitpack_surface_c), intent(in) :: this
        real(c_double), intent(in), optional :: smoothing
        integer(c_int32_t), intent(in), optional :: order
        logical(c_bool), intent(in), optional :: keep_knots
        type(fitpack_surface), pointer :: fthis
        logical :: f_keep_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(keep_knots)) f_keep_knots = logical(keep_knots)
            if (present(keep_knots)) then
                fitpack_surface_c_fit = fthis%fit(smoothing=smoothing, order=order, keep_knots=f_keep_knots)
            else
                fitpack_surface_c_fit = fthis%fit(smoothing=smoothing, order=order)
            end if
        else
            fitpack_surface_c_fit = 0
        end if
    end function fitpack_surface_c_fit

    !> interpolate
    integer(c_int32_t) function fitpack_surface_c_interpolate(this, reset_knots) bind(C, name='fitpack_surface_c_interpolate')
        type(fitpack_surface_c), intent(in) :: this
        logical(c_bool), intent(in), optional :: reset_knots
        type(fitpack_surface), pointer :: fthis
        logical :: f_reset_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(reset_knots)) f_reset_knots = logical(reset_knots)
            if (present(reset_knots)) then
                fitpack_surface_c_interpolate = fthis%interpolate(reset_knots=f_reset_knots)
            else
                fitpack_surface_c_interpolate = fthis%interpolate()
            end if
        else
            fitpack_surface_c_interpolate = 0
        end if
    end function fitpack_surface_c_interpolate

    !> least_squares
    integer(c_int32_t) function fitpack_surface_c_least_squares(this, smoothing, reset_knots) bind(C,  &
        & name='fitpack_surface_c_least_squares')
        type(fitpack_surface_c), intent(in) :: this
        real(c_double), intent(in), optional :: smoothing
        logical(c_bool), intent(in), optional :: reset_knots
        type(fitpack_surface), pointer :: fthis
        logical :: f_reset_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(reset_knots)) f_reset_knots = logical(reset_knots)
            if (present(reset_knots)) then
                fitpack_surface_c_least_squares = fthis%least_squares(smoothing=smoothing, reset_knots=f_reset_knots)
            else
                fitpack_surface_c_least_squares = fthis%least_squares(smoothing=smoothing)
            end if
        else
            fitpack_surface_c_least_squares = 0
        end if
    end function fitpack_surface_c_least_squares

    !> surface_eval_one
    real(c_double) function fitpack_surface_c_surface_eval_one(this, x, y, ierr) bind(C, name='fitpack_surface_c_surface_eval_one')
        type(fitpack_surface_c), intent(in) :: this
        real(c_double), intent(in), value :: x, y
        integer(c_int32_t), intent(out), optional :: ierr
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_surface_c_surface_eval_one = fthis%eval(x, y, ierr)
        else
            fitpack_surface_c_surface_eval_one = 0.0_c_double
        end if
    end function fitpack_surface_c_surface_eval_one

    !> surface_derivatives_one
    real(c_double) function fitpack_surface_c_surface_derivatives_one(this, x, y, dx, dy, ierr) bind(C,  &
        & name='fitpack_surface_c_surface_derivatives_one')
        type(fitpack_surface_c), intent(in) :: this
        real(c_double), intent(in), value :: x, y
        integer(c_int32_t), intent(in), value :: dx, dy
        integer(c_int32_t), intent(out), optional :: ierr
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_surface_c_surface_derivatives_one = fthis%dfdx(x, y, dx, dy, ierr)
        else
            fitpack_surface_c_surface_derivatives_one = 0.0_c_double
        end if
    end function fitpack_surface_c_surface_derivatives_one

    !> cross_section
    subroutine fitpack_surface_c_cross_section(this, u, along_y, ierr, result) bind(C, name='fitpack_surface_c_cross_section')
        type(fitpack_surface_c), intent(inout) :: this
        real(c_double), intent(in), value :: u
        logical(c_bool), intent(in), value :: along_y
        integer(c_int32_t), intent(out), optional :: ierr
        type(fitpack_curve_c), intent(out) :: result
        type(fitpack_curve), pointer :: fresult
        type(fitpack_surface), pointer :: fthis
        logical :: f_along_y

        fthis => f_pointer(this)
        if (associated(fthis)) then
            f_along_y = logical(along_y)
            ! Sourced allocation (F2018 6.7.1.2) bypasses user-defined assignment(=); see CLAUDE.md §8.10.
            allocate(fresult, source=fthis%cross_section(u=u, along_y=f_along_y, ierr=ierr))
            result%cptr = c_loc(fresult)
            result%is_pointer = .false._c_bool
            result%name_cptr = f_type_name(fitpack_curve_c_null)
        end if
    end subroutine fitpack_surface_c_cross_section

    !> derivative_spline
    subroutine fitpack_surface_c_derivative_spline(this, nux, nuy, ierr, result) bind(C, name='fitpack_surface_c_derivative_spline')
        type(fitpack_surface_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: nux, nuy
        integer(c_int32_t), intent(out), optional :: ierr
        type(fitpack_surface_c), intent(out) :: result
        type(fitpack_surface), pointer :: fresult, fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            ! Sourced allocation (F2018 6.7.1.2) bypasses user-defined assignment(=); see CLAUDE.md §8.10.
            allocate(fresult, source=fthis%derivative_spline(nux=nux, nuy=nuy, ierr=ierr))
            result%cptr = c_loc(fresult)
            result%is_pointer = .false._c_bool
            result%name_cptr = c_loc(fitpack_surface_c_typename)
        end if
    end subroutine fitpack_surface_c_derivative_spline

    !> comm_size
    integer(c_int32_t) function fitpack_surface_c_comm_size(this) bind(C, name='fitpack_surface_c_comm_size')
        type(fitpack_surface_c), intent(in) :: this
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_surface_c_comm_size = fthis%comm_size()
        else
            fitpack_surface_c_comm_size = 0
        end if
    end function fitpack_surface_c_comm_size

    !> mse
    real(c_double) function fitpack_surface_c_mse(this) bind(C, name='fitpack_surface_c_mse')
        type(fitpack_surface_c), intent(in) :: this
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_surface_c_mse = fthis%mse()
        else
            fitpack_surface_c_mse = 0.0_c_double
        end if
    end function fitpack_surface_c_mse

    !> core_comm_size
    integer(c_int32_t) function fitpack_surface_c_core_comm_size(this) bind(C, name='fitpack_surface_c_core_comm_size')
        type(fitpack_surface_c), intent(in) :: this
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_surface_c_core_comm_size = fthis%core_comm_size()
        else
            fitpack_surface_c_core_comm_size = 0
        end if
    end function fitpack_surface_c_core_comm_size

    !> destroy_base
    subroutine fitpack_surface_c_destroy_base(this) bind(C, name='fitpack_surface_c_destroy_base')
        type(fitpack_surface_c), intent(inout) :: this
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%destroy_base()
        end if
    end subroutine fitpack_surface_c_destroy_base

    !> new_points
    subroutine fitpack_surface_c_new_points(this, n, x, y, z, w) bind(C, name='fitpack_surface_c_new_points')
        type(fitpack_surface_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: x(n)
        real(c_double), intent(in) :: y(n)
        real(c_double), intent(in) :: z(n)
        real(c_double), optional, intent(in) :: w(n)
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%new_points(x, y, z, w)
        end if
    end subroutine fitpack_surface_c_new_points

    !> new_fit
    integer(c_int32_t) function fitpack_surface_c_new_fit(this, n, x, y, z, w, smoothing, order) bind(C,  &
        & name='fitpack_surface_c_new_fit')
        type(fitpack_surface_c), intent(in) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: x(n)
        real(c_double), intent(in) :: y(n)
        real(c_double), intent(in) :: z(n)
        real(c_double), optional, intent(in) :: w(n)
        real(c_double), intent(in), optional :: smoothing
        integer(c_int32_t), intent(in), optional :: order
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_surface_c_new_fit = fthis%new_fit(x, y, z, w, smoothing, order)
        else
            fitpack_surface_c_new_fit = 0
        end if
    end function fitpack_surface_c_new_fit

    !> surface_eval_many
    subroutine fitpack_surface_c_surface_eval_many(this, n, x, y, ierr, result, n_result, max_size) bind(C,  &
        & name='fitpack_surface_c_surface_eval_many')
        type(fitpack_surface_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: x(n)
        real(c_double), intent(in) :: y(n)
        integer(c_int32_t), intent(out), optional :: ierr
        real(c_double), intent(inout) :: result(*)
        integer(c_int32_t), intent(out) :: n_result
        integer(c_int32_t), intent(in), value :: max_size
        real(c_double), allocatable :: fresult(:)
        type(fitpack_surface), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fresult = fthis%eval(x=x, y=y, ierr=ierr)
            n_result = size(fresult)
            result(1:min(n_result, max_size)) = fresult(1:min(n_result, max_size))
        end if
    end subroutine fitpack_surface_c_surface_eval_many
